--- a/style.css
+++ b/style.css
@@ -147,9 +147,164 @@
     color: #F8F7F4;
 }
 
+.dropdown-menu {
+    color: black;
+}
+
+/* Live Streaming */
+.jumbotron4 {
+    background-image: url(2.jpg);
+    background-size: cover;
+    height: 650px;
+    position: relative;
+}
+
+.jumbotron4 .container {
+    /* position: relative;
+    z-index: 1; */
+    position: absolute;
+}
+
+.jumbotron4::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 12%;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.2));
+    position: absolute;
+    top: 0;
+} 
+
+.jumbotron4::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 60%;
+    background-image: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,0));
+    position: absolute;
+    bottom: 0;
+}
+
+/* Movie */
+video {
+    position: relative;
+    z-index: 1;
+    width: 854px;
+    height: 480px;
+    margin-top: 100px;
+    margin-left: 75px;
+}
+
+/* Chatbox */
+.chatbox {
+    position: relative;
+    margin-top: -485px;
+    margin-left: 955px;
+    width: 280px;
+    min-width: 250px;
+    height: 500px;
+    background:rgba(0,0,0,0.7);
+    color: #F8F7F4;
+    padding: 25px;
+    box-shadow: 6px 6px 6px #000000;
+}
+
+.chatlogs{
+    position: absolute;
+    padding: 10px 0 10px 0;
+    width: 100%;
+    height: 360px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.chatlogs::-webkit-scrollbar {
+    width: 10px;
+}
+
+.chatlogs::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
+.chatlogs::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: rgba(0,0,0,.1);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.chat {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: flex-start;
+}
+
+.chat .user-photo {
+    width: 20px;
+    height: 20px;
+    /* background: #F8F7F4; */
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.chat .user-photo img {
+    width: 100%;
+}
+
+.chat .chat-message {
+    width: 85%;
+    padding: 0 15px;
+    margin: 0 0 10px 8px;
+    font-size: 10pt;
+}
+
+.chat-form {
+    position: relative;
+    z-index: 1;
+    margin-top: 400px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: flex-end;    
+}
+
+.chat-form textarea {
+    background: transparent;
+    width: 100%;
+    height: 30px;
+    border: none;
+    border-bottom: 1px solid white; 
+    color:white;
+    font-size: 10pt;
+    resize: none;
+}
+
+.chat-form textarea::-webkit-scrollbar {
+    width: 10px;
+}
+
+.chat-form textarea::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.3);
+    border-radius: 10px;
+}
+
+.chat-form textarea::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background: rgba(255,255,255,.1);
+    -webkit-box-shadow: inset 0 0 6px rgba(255,255,255,0.3);
+}
+
+.chat-form button {
+    background: transparent;
+    border: 1px solid white;
+    border-radius: 30px;
+    color: white;
+    font-size: 10pt;
+    padding: 2px 10px;
+    font-family: 'Roboto Mono', monospace;
+}
 
 /* Desktop Version */
-@media (min-width: 992px) {
+/* @media (min-width: 992px) { */
 
     /* Navbar */
     .nav-link {
@@ -167,7 +322,8 @@
     .nav-link:hover::after {
         content: '';
         display: block;
-        border-bottom: 2px solid white;
+        /* border-bottom: 2px solid white; */
+        border-bottom: 2px solid black;
         width: 50%;
         margin: auto;
         padding-bottom: 2px;
@@ -185,6 +341,10 @@
 
     .jumbotron3 {
         margin-top: -265px;
+    }
+
+    .jumbotron4 {
+        margin-top: -85px;
     }
 
     /* Form Register */
@@ -328,6 +488,9 @@
     }
 
     .btn-coba{
+        /* display: block; */
+        /* margin: auto;
+        width: 50%; */
         position: relative;
         left: 500px;
         top: 40px; 
@@ -397,6 +560,16 @@
         height: 160px;
     }
 
+    .img-thumbnail2 {
+        position: absolute;
+        z-index: 1;
+        border-radius: 100%;
+        top: 13px;
+        right: 200px;
+        width: 35px;
+        height: 35px;
+    }
+
     .hi p {
         position: relative;
         text-align: center;
@@ -407,4 +580,4 @@
         font-family: 'Noto Sans', sans-serif;
     }
 
-}
+/* } */
