--- a/views/user-common.ejs
+++ b/views/user-common.ejs
@@ -35,6 +35,7 @@
             <div class="container">
                 <h1 class="display-4">WELCOME USER</h1>
                 <p> <a href="#" class="btn-join">Join</a> </p>
+                <p> <a href="#" class="btn-logout">Logout</a> </p>
             </div>
         </div>
         <% include layouts/foot %>
