--- a/views/register.ejs
+++ b/views/register.ejs
@@ -52,8 +52,9 @@
                 <b> <h1>Confirm Password</h1> </b>
                 <p> <input type="Password" title="password" name="passwordConfirm" id="confirm_password" onkeyup="check();"> </p>
                 <span id='message'></span>
-                <b> <h2>Foto Profile</h2> </b>
-                <p> <input type="file"  name="gambar" id="gambar"/> </p>
+                <!-- Belum dibuat Algonya -->
+                <!-- <b> <h2>Foto Profile</h2> </b>
+                <p> <input type="file"  name="gambar" id="gambar"/> </p> -->
                 <p> <button type="submit" id="submit" name="register" class="btn">Submit</button> </p>
             </form>
         </div>
