--- a/views/register.ejs
+++ b/views/register.ejs
@@ -55,7 +55,7 @@
                 <!-- Belum dibuat Algonya -->
                 <!-- <b> <h2>Foto Profile</h2> </b>
                 <p> <input type="file"  name="gambar" id="gambar"/> </p> -->
-                <p> <button type="submit" id="submit" name="register" class="btn">Submit</button> </p>
+                <p> <button type="submit" id="submit" class="btn-login" name="register">Submit</button> </p>
             </form>
         </div>
         <% include layouts/foot %>
