--- a/views/user-common.ejs
+++ b/views/user-common.ejs
@@ -24,7 +24,7 @@
                     <img src="/images/profile/bear.jpg" alt="Gak bisa oy" class="img-thumbnail">
                     <!-- <img src="img/<?=$res['gambar']?>" alt="img/default.png" class="img-thumbnail"> -->
                     <div class="hi">
-                        <p> Hi <?=$res['user']?> </p>
+                        <p> Hi <%= name %> </p>
                     </div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
             <div class="container">
                 <h1 class="display-4">WELCOME USER</h1>
                 <p> <a href="#" class="btn-join">Join</a> </p>
-                <p> <a href="#" class="btn-logout">Logout</a> </p>
+                <p> <a href="/logout" class="btn-logout">Logout</a> </p>
             </div>
         </div>
         <% include layouts/foot %>
