--- a/views/user-master.ejs
+++ b/views/user-master.ejs
@@ -24,7 +24,7 @@
                     <img src="/images/profile/bear.jpg" alt="Gak bisa oy" class="img-thumbnail">
                     <!-- <img src="img/<?=$res['gambar']?>" alt="img/default.png" class="img-thumbnail"> -->
                     <div class="hi">
-                        <p> Hi <?=$res['user']?> </p>
+                        <p> Hi <%= name %> </p>
                     </div>
                 </div>
             </div>
