logout button master room

--- a/views/user-master.ejs
+++ b/views/user-master.ejs
@@ -35,7 +35,7 @@
             <div class="container">
                 <h1 class="display-4">WELCOME ROOM MASTER</h1>
                 <p> <a href="#" class="btn-upload">Upload Movie</a> </p>
-                <p> <a href="#" class="btn-update">Update</a> </p>
+                <p> <a href="/logout" class="btn-update">Logout</a> </p>
             </div>
         </div>
         <% include layouts/foot %>
