--- a/views/livestreaming-user.ejs
+++ b/views/livestreaming-user.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <% include layouts/head %>
+        <script src="/socket.io/socket.io.js"></script>
         <title>Stream For All Of You</title>
     </head>
 
@@ -9,7 +10,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
-            <a class="navbar-brand" href="#">OnlineCinema</a>
+            <a class="navbar-brand" href="/">OnlineCinema</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -21,7 +22,7 @@
                             Username
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Logout</a>
+                            <a class="dropdown-item" href="/logout">Logout</a>
                         </li>
                         <!-- Foto Profil -->
                             <!-- <img src="img/5d7e27b07cf5d.png" alt="hi" class="img-thumbnail2"> -->
@@ -33,8 +34,8 @@
         <!-- Jumbotron -->
         <div class="jumbotron4 jumbotron-fluid">
             <!-- Movie -->
-            <video src="movie/launch.mp4">
-            </video>
+            <img id="play">
+
             <!-- Chat -->
             <div class="chatbox">
                 <div class="chatlogs">
@@ -57,6 +58,13 @@
             </div>
 
         </div>
+        <script>
+            var socket = io();
+            socket.on('stream', function(image){
+                var img = document.getElementById("play");
+                img.src = image;                
+            });
+        </script>
         <% include layouts/foot %>
     </body>
 </html>
