--- a/views/livestreaming-user.ejs
+++ b/views/livestreaming-user.ejs
@@ -39,7 +39,7 @@
             <img id="play">
             <div id="logger"></div>
             <!-- Chat -->
-            <div class="chatbox">
+            <div class="chatbox-u">
                 <div class="chatlogs">
 
                     <div class="chat">
