--- a/views/livestreaming.ejs
+++ b/views/livestreaming.ejs
@@ -74,7 +74,7 @@
             context.height = canvas.height;
 
             var video = document.getElementById("video");
-            var socket = io('http://localhost:8600');
+            var socket = io('http://10.151.252.172:8600/');
             
             function logger(msg){
                 $('#logger').text(msg);
