update responsive dikit2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,8 @@
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
         <a class="navbar-brand" href="/">OnlineCinema</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -26,8 +27,27 @@
         </div>
     </nav>
 
+    <!-- Container -->
+    <div class="container">
+        <h1 class="display-4">Nonton Bareng</h1>
+            <div class="row justify-content-center">
+                <div class="col-md-6 mx-auto">
+                    <div class="lead">
+                        <p> Mau nonton bareng, tapi males ke Bioskop?<br>
+                        Disini, bisa pilih film yang ingin kamu tonton dan ajak siapapun yang kamu mau<br> 
+                        tanpa perlu repot datang ke bioskop </p>
+                    </div>
+                    <div class="col-3 mx-auto">
+                            <p> <a href="/register" class="btn-coba">Coba</a> </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <p> <a href="/register" class="btn-coba">Coba</a> </p> -->
+        </div>
+
     <!-- Jumbotron -->
-    <div class="jumbotron jumbotron-fluid">
+    <!-- <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Nonton Bareng</h1>
             <div class="lead">
@@ -37,7 +57,7 @@
             </div>
             <p> <a href="/register" class="btn-coba">Coba</a> </p>
         </div>
-    </div>
+    </div> -->
     <% include layouts/foot %>
   </body>
 </html>
