--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,31 @@
+/* Body */
+body {
+    background-image: url('/images/film_0.jpg'); 
+    background-size: cover;
+    height: 650px;
+    position: relative;
+}
+
+body::before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 9%;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.2));
+    position: absolute;
+    top: 0;
+} 
+
+body::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 60%;
+    background-image: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,0));
+    position: absolute;
+    bottom: 0;
+}
+
 /* Navbar */
 .navbar {
     position: relative;
@@ -11,57 +39,26 @@
 }
 
 /* Jumbotron */
-.jumbotron {
-    background-image: url('/images/film_0.jpg'); 
-    background-size: cover;
-    height: 650px;
-    position: relative;
-}
-
-.jumbotron .container {
-    position: relative;
-    z-index: 1;
-}
-
-.jumbotron::before {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 12%;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.2));
-    position: absolute;
-    top: 0;
-} 
-
-.jumbotron::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 60%;
-    background-image: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,0));
-    position: absolute;
-    bottom: 0;
-}
-
-.jumbotron .display-4 {
+.display-4 {
     text-align: center;
     margin-top: 150px;
     font-weight: 400;
     text-shadow: 0 0 15px rgba(0,0,0,0.7), 0 0 10px rgba(0,0,0,0.7);
-    margin-bottom: 50px;
+    margin-bottom: 40px;
     color: #F8F7F4;
 }
 
-.jumbotron .lead {
+.lead {
     text-align: center;
     font-size: 15px;
-    line-height: 5px;
-    font-weight: 500;
+    line-height: 20px;
+    font-weight: 450;
+    margin-bottom: 20px;
     text-shadow: 0 0 15px rgba(0,0,0,0.4), 0 0 10px rgba(0,0,0,0.4);
     color: #F8F7F4;
 }
 
-.jumbotron .display-4_register {
+.display-4_register {
     left: 110px;
     top: 60px;
     position: relative;
@@ -71,7 +68,7 @@
     text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.7);
 }
 
-.jumbotron .lead_register {
+.lead_register {
     text-align: left;
     position: relative;
     left: 240px;
@@ -80,7 +77,7 @@
     line-height: 10px;
     font-weight: 500;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.4);
-}
+}  */
 
 /* User */
 .jumbotron2 {
@@ -316,9 +313,115 @@ video {
     font-family: 'Roboto Mono', monospace;
 }
 
-/* Desktop Version */
-/* @media (min-width: 992px) { */
+/* Phone Version */
+@media (max-width: 576px) {
+    /* Halaman Index.ejs */
+    /* Nonton Bareng */
+    .display-4 {
+        width: 100%;
+        text-align: center;
+        margin-top: 100px;
+        font-weight: 400;
+        font-size: 50px; 
+        text-shadow: 0 0 5px rgba(0,0,0,0.7), 0 0 5px rgba(0,0,0,0.7);
+        margin-bottom: 40px;
+        color: #F8F7F4;
+    }
+    
+    /* Deskripsi */
+    .lead {
+        text-align: center;
+        font-size: 12px;
+        line-height: 16px;
+        font-weight: 500;
+        margin-bottom: 20px;
+        text-shadow: 0 0 5px rgba(0,0,0,0.4), 0 0 5px rgba(0,0,0,0.4);
+        color: #F8F7F4;
+    }
 
+    /* Button Coba */
+    .btn-coba{
+        position: relative;
+        right: 40px;
+    }
+
+    /* Navbar */
+    .navbar-brand, .nav-link {
+        text-shadow: 2px 2px 2px rgba(255, 255, 255, 0.7);
+    }
+
+    .nav-link:hover {
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.4);
+    }
+
+    .nav-link:hover::after {
+        content: '';
+        display: block;
+        /* border-bottom: 2px solid white; */
+        border-bottom: 2px solid black;
+        width: 0% !important;
+        /* margin: auto; */
+        padding-bottom: 2px;
+        margin-bottom: -4px;
+    }
+
+    /* Halaman Login.ejs */
+    /* Form Login */
+    .login{
+        position: relative;
+        z-index: 1;
+        width: 350px;
+        height: 280px;
+        max-width: 100%;
+        max-height: 80%; 
+        opacity: 0.6;
+        background-color: black;
+        color: white;
+        box-sizing: border-box;
+        font-family: 'Roboto Mono', monospace;
+        line-height: 32px;
+        padding: 50px 45px;
+        margin-left: -127px;
+    }
+    
+    .login input{
+        width: 100%;
+        border: none;
+        outline: none;
+        background: transparent;
+        border-bottom: 1px solid white; 
+        color:white;
+        margin-bottom: 10px;
+    } 
+
+    .login select{
+        width: 100%;
+        border: none;
+        outline: none;
+        background: transparent;
+        border-bottom: 1px solid white; 
+        height: 25px;
+        margin-bottom: 15px;
+        color:white;
+    } 
+    
+    .login select::before{
+        content: '';
+        background: red;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: 100px;
+        pointer-events: none;
+    } 
+    
+    .login h1{
+        font-size: 14px;
+        margin-bottom: -3px;
+    }
+}
     /* Navbar */
     .nav-link {
         text-transform: uppercase;
@@ -335,7 +438,6 @@ video {
     .nav-link:hover::after {
         content: '';
         display: block;
-        /* border-bottom: 2px solid white; */
         border-bottom: 2px solid black;
         width: 50%;
         margin: auto;
@@ -440,6 +542,7 @@ video {
 
     /* Form Login */
     .login{
+        margin-top:0;
         position: relative;
         z-index: 1;
         width: 350px;
@@ -447,7 +550,6 @@ video {
         right: 50%;
         bottom: 110px;
         left: 50%;
-        position: absolute; 
         opacity: 0.6;
         background-color: black;
         color: white;
@@ -520,18 +622,18 @@ video {
     }
 
     .btn-coba{
-        /* display: block; */
-        /* margin: auto;
-        width: 50%; */
-        position: relative;
-        left: 500px;
-        top: 40px; 
         background: rgba(0,0,0,0.2);
         border: 1px solid white;
         border-radius: 30px;
         color: white;
         padding: 5px 35px 5px 35px;
         font-family: 'Roboto Mono', monospace;
+        position: relative;
+        z-index: 2;
+    }
+
+    .btn-coba:visited{
+        color: white;
     }
     
     .btn-register{
@@ -623,5 +725,3 @@ video {
         color: white;
         font-family: 'Noto Sans', sans-serif;
     }
-
-/* } */
