update index.ejs bisa lihat di device

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,6 +8,7 @@
             }
         </style>
         <title>Register</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 
     <body>
