--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <% include layouts/head %>
     <title>Welcome To Our Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <!-- Navbar -->
