--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
     <head>
         <% include layouts/head %>
         <title>Login</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <% if(success==1) {%>
