fix bug ganti ip manual

--- a/views/livestreaming-user.ejs
+++ b/views/livestreaming-user.ejs
@@ -61,7 +61,7 @@
 
         </div>
         <script type="text/javascript">
-            var socket = io('http://10.151.254.158:8600/');
+            var socket = io('');
             socket.on('stream', function(image){
                 var img = document.getElementById("play");
                 img.src = image;
