--- a/views/register.ejs
+++ b/views/register.ejs
@@ -35,16 +35,11 @@
 
         <!-- Container -->
         <div class="container">
-            <h1 class="display-4">Register</h1>
+            <h1 class="display-4_register">Register</h1>
                 <div class="row justify-content-center">
                     <div class="col-md-6 mx-auto">
-                        <div class="lead">
-                            <p> Mau nonton bareng, tapi males ke Bioskop?<br>
-                            Disini, bisa pilih film yang ingin kamu tonton dan ajak siapapun yang kamu mau<br> 
-                            tanpa perlu repot datang ke bioskop </p>
-                        </div>
-                        <div class="col-3 mx-auto">
-                                <p> <a href="/register" class="btn-coba">Coba</a> </p>
+                        <div class="lead_register">
+                            <p> Selamat Mendaftar </p>
                         </div>
                     </div>
                 </div>
