--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,10 +31,10 @@
         </nav>
         <!-- Container -->
         <div class="container">
-            <h1 class="display-4_register">Login</h1>
+            <h1 class="display-4_login">Login</h1>
                 <div class="row justify-content-center">
                     <div class="col-md-6 mx-auto">
-                        <div class="lead_register">
+                        <div class="lead_login">
                             <p> Belum punya akun? </p>
                         </div>
                         <div class="col-3 mx-auto">
@@ -43,7 +43,7 @@
                     </div>
                 </div>
 
-        <!-- Form Register -->
+        <!-- Form Login -->
         <div class="row justify-content-center">
             <div class="col-md-6 mx-auto">
                 <div class="login">
@@ -57,6 +57,7 @@
                 </div>
             </div>
         </div>
+
     <% include layouts/foot %>
     </body>
 </html>
