mencoba menerapkan fitur chat

--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -7,6 +7,8 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
     crossorigin="anonymous">
-
+<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 
 <link rel="stylesheet" href="/css/style.css">
